examples/test/testpolicy1687.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1687
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key41: value36
      key37: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
          key36: value27
      podSelector:
        matchLabels:
          key23: value11
          key6: value39
